[package]
name = "rss-iced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "2.0"
reqwest =  "0.11"
tokio = {version = "1", features = ["full"]}
futures = "0.3.25"
iced = {version = "0.4", features = ["pure"]}
iced_aw = "0.2.0"
iced_native = "0.5.1"
open = "3.0.3"